@@ -62,6 +62,7 @@ Release 0.9.3
 - use treeview to display unit tests
 - convert ZMReviews and ZMTaxRates to using ZMDatabase
 - change ZMLoader::findIncludes() to allow controlling the filename suffix
+- allow to manually register classes
 
 Release 0.9.2
 - add database support for data type blob
